Hands-on lab/microservices/claims-reader/src/main/k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: claims-reader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: claims-reader
  template:
    metadata:
      labels:
        app: claims-reader
    spec:
      containers:
      - name: claims-reader
        image: ${IMAGE}
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: claims-reader 
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: claims-reader
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: claims-reader
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: claims-reader.${AKS_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: claims-reader
            port: 
              number: 8080
